<resources>
    <string name="app_name">TravelCompanionApp</string>
    <string name="action_info">Info</string>
    <string name="action_share">Share</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="poi_main_image_descr">Main image for Place of Interest.</string>
    <string name="poi_name_label_text">Name</string>
    <string name="todo">TODO</string>
    <string name="poi_name_hint">Enter place name</string>
    <string name="poi_descr_label_text">Description</string>
    <string name="poi_descr_hint">Enter a description</string>
    <string name="poi_location_label_text">Location</string>
    <string name="poi_location_hint">Enter a location</string>
    <string name="poi_cat_label_text">Category</string>
    <string name="poi_rating_label_text">Rating</string>
    <string name="poi_notes_label_text">Notes</string>
    <string name="poi_notes_hint">Enter notes</string>
    <string name="poi_date_added_text">Added</string>
    <string name="poi_placeholder_date">17th April 2022</string>
    <string name="button_location_text">View on Map</string>
    <string name="button_share_text">Share</string>
    <string name="button_save_text">Save</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="clear_button_text">Clear</string>
    <string name="locate_button_text">Locate</string>

    <string-array name="poi_cat_array">
        <item>Amusement Park</item>
        <item>Art Gallery</item>
        <item>Beach</item>
        <item>Car Park</item>
        <item>Cinema</item>
        <item>Monument</item>
        <item>Museum</item>
        <item>Public Park</item>
        <item>Shop</item>
        <item>Sports Venue</item>
        <item>Theater</item>
        <item>Zoo</item>
    </string-array>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="button_gallery_label">View Gallery</string>
    <string name="button_camera_label">Take Photo</string>
    <string name="button_select_label">Select Photo</string>
</resources>